[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scenes/ButtonIndicator/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Elevador.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Cenário/CenarioFundo.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Elevador/elevadorandar.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Elevador/ElevadorAbrindo.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Elevador/02.png" type="Texture" id=6]
[ext_resource path="res://Scripts/CompEng.gd" type="Script" id=7]
[ext_resource path="res://Sprites/SatelliteTask/antena.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Cenários/Moeda.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Computer Task/GabineteTaskSprite.png" type="Texture" id=10]
[ext_resource path="res://Scenes/NPC/NPC.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/HudEnergy.tscn" type="PackedScene" id=12]
[ext_resource path="res://Fontes/Minecraftia-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Sprites/Outros/IntroductionSprite.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 45.5, 31.5 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 29, 7.5 )

[sub_resource type="Animation" id=23]
resource_name = "Abrindo"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ), Vector2( 6, 1 ), Vector2( 7, 1 ), Vector2( 8, 1 ), Vector2( 9, 1 ), Vector2( 10, 1 ), Vector2( 11, 1 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "Abrir"
length = 0.001
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "Fechar"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 11, 1 ), Vector2( 10, 1 ), Vector2( 9, 1 ), Vector2( 8, 1 ), Vector2( 7, 1 ), Vector2( 6, 1 ), Vector2( 5, 1 ), Vector2( 4, 1 ), Vector2( 3, 1 ), Vector2( 2, 1 ), Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "Idle"
length = 0.001
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Abrindo"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Abrir"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Fechar"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=28]
states/Abrindo/node = SubResource( 12 )
states/Abrindo/position = Vector2( 336, 20.9794 )
states/Abrir/node = SubResource( 18 )
states/Abrir/position = Vector2( 161.333, 21.8325 )
states/Fechar/node = SubResource( 14 )
states/Fechar/position = Vector2( 525.333, 106.429 )
states/Idle/node = SubResource( 17 )
states/Idle/position = Vector2( 1.333, 107.315 )
transitions = [ "Abrindo", "Fechar", SubResource( 15 ), "Fechar", "Abrindo", SubResource( 16 ), "Idle", "Abrir", SubResource( 19 ), "Abrir", "Idle", SubResource( 20 ), "Abrir", "Abrindo", SubResource( 21 ), "Fechar", "Idle", SubResource( 22 ) ]
start_node = "Idle"
graph_offset = Vector2( -99, -17 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 33, 27.5 )

[sub_resource type="DynamicFont" id=33]
size = 8
font_data = ExtResource( 13 )

[node name="Cenário 3" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="SatelliteTaskArea" type="Area2D" parent="."]
position = Vector2( -49, 75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SatelliteTaskArea"]
position = Vector2( 12.5, 0 )
shape = SubResource( 31 )

[node name="Sprite" type="Sprite" parent="SatelliteTaskArea"]
position = Vector2( 0, -24 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )
hframes = 2

[node name="Button" parent="SatelliteTaskArea" instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, -53 )
scale = Vector2( 2, 2 )

[node name="ComputerTaskArea" type="Area2D" parent="."]
position = Vector2( -172, 97 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ComputerTaskArea"]
position = Vector2( 0, 2.5 )
shape = SubResource( 32 )

[node name="Sprite" type="Sprite" parent="ComputerTaskArea"]
position = Vector2( 0, -9 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
hframes = 2

[node name="Button" parent="ComputerTaskArea" instance=ExtResource( 1 )]
visible = false
scale = Vector2( 2, 2 )

[node name="NPC" parent="." instance=ExtResource( 11 )]
position = Vector2( 136, 82 )
spriteType = 1
level = "Level 2"

[node name="HudEenrgia" parent="." instance=ExtResource( 12 )]
position = Vector2( -321, -180 )
level = "Level 2"

[node name="Elevador" type="Area2D" parent="."]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
playerPath = "/root/Level 2/Player"
chooseFloor = [ "", " 1", " 3", " 4", " 5" ]
chooseAnim = [ 0, 1, 3, 4, 5 ]
animDefault = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Elevador"]
root_node = NodePath("../ElevadorSprite")
anims/Abrindo = SubResource( 23 )
anims/Abrir = SubResource( 24 )
anims/Fechar = SubResource( 25 )
anims/Idle = SubResource( 26 )
anims/RESET = SubResource( 27 )

[node name="AnimationTree" type="AnimationTree" parent="Elevador"]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 29 )

[node name="ElevadorSprite" type="Sprite" parent="Elevador"]
texture = ExtResource( 5 )
hframes = 12
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Elevador"]
position = Vector2( 126, 25.5 )
shape = SubResource( 30 )

[node name="Button" parent="Elevador" instance=ExtResource( 1 )]
position = Vector2( 128, 15 )

[node name="FloorIndicator" type="Sprite" parent="Elevador"]
texture = ExtResource( 4 )
hframes = 6
frame = 2

[node name="ElevadorInterface0" type="Control" parent="Elevador"]
visible = false
margin_left = -160.0
margin_top = -89.0
margin_right = 160.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botoes" type="Sprite" parent="Elevador/ElevadorInterface0"]
position = Vector2( 160, 89 )
texture = ExtResource( 6 )
hframes = 6

[node name="ButtonFechar" type="Button" parent="Elevador/ElevadorInterface0"]
show_behind_parent = true
margin_left = 211.0
margin_right = 225.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAndar1" type="Button" parent="Elevador/ElevadorInterface0"]
show_behind_parent = true
margin_left = 136.0
margin_top = 113.0
margin_right = 156.0
margin_bottom = 133.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAndar2" type="Button" parent="Elevador/ElevadorInterface0"]
show_behind_parent = true
margin_left = 164.0
margin_top = 113.0
margin_right = 184.0
margin_bottom = 133.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAndar3" type="Button" parent="Elevador/ElevadorInterface0"]
show_behind_parent = true
margin_left = 164.0
margin_top = 81.0
margin_right = 184.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAndar4" type="Button" parent="Elevador/ElevadorInterface0"]
show_behind_parent = true
margin_left = 136.0
margin_top = 48.5
margin_right = 156.0
margin_bottom = 68.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAndar5" type="Button" parent="Elevador/ElevadorInterface0"]
show_behind_parent = true
margin_left = 164.0
margin_top = 49.0
margin_right = 184.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Advertise" type="Control" parent="Elevador"]
visible = false
margin_left = -70.0
margin_top = -91.0
margin_right = 91.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Elevador/Advertise"]
position = Vector2( 70, 91 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Elevador/Advertise"]
margin_left = 21.0
margin_top = 76.5
margin_right = 158.0
margin_bottom = 101.5
custom_fonts/font = SubResource( 33 )
text = "Finalize todas as tasks antes de ir para este andar"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Elevador/Advertise"]
show_behind_parent = true
margin_left = 146.0
margin_top = 69.0
margin_right = 158.0
margin_bottom = 89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moeda" parent="." instance=ExtResource( 9 )]
margin_left = -320.0
margin_top = -180.0
margin_right = -280.0
margin_bottom = -140.0

[connection signal="body_entered" from="SatelliteTaskArea" to="." method="_on_SatelliteTaskArea_body_entered"]
[connection signal="body_exited" from="SatelliteTaskArea" to="." method="_on_SatelliteTaskArea_body_exited"]
[connection signal="body_entered" from="ComputerTaskArea" to="." method="_on_ComputerTaskArea_body_entered"]
[connection signal="body_exited" from="ComputerTaskArea" to="." method="_on_ComputerTaskArea_body_exited"]
[connection signal="body_entered" from="Elevador" to="Elevador" method="_on_Elevador_body_entered"]
[connection signal="body_exited" from="Elevador" to="Elevador" method="_on_Elevador_body_exited"]
[connection signal="pressed" from="Elevador/ElevadorInterface0/ButtonFechar" to="Elevador" method="_on_ButtonFechar_pressed"]
[connection signal="mouse_entered" from="Elevador/ElevadorInterface0/ButtonAndar1" to="Elevador" method="_on_ButtonAndar1_mouse_entered"]
[connection signal="mouse_exited" from="Elevador/ElevadorInterface0/ButtonAndar1" to="Elevador" method="_on_ButtonAndar1_mouse_exited"]
[connection signal="pressed" from="Elevador/ElevadorInterface0/ButtonAndar1" to="Elevador" method="_on_ButtonAndar1_pressed"]
[connection signal="mouse_entered" from="Elevador/ElevadorInterface0/ButtonAndar2" to="Elevador" method="_on_ButtonAndar2_mouse_entered"]
[connection signal="mouse_exited" from="Elevador/ElevadorInterface0/ButtonAndar2" to="Elevador" method="_on_ButtonAndar2_mouse_exited"]
[connection signal="pressed" from="Elevador/ElevadorInterface0/ButtonAndar2" to="Elevador" method="_on_ButtonAndar2_pressed"]
[connection signal="mouse_entered" from="Elevador/ElevadorInterface0/ButtonAndar3" to="Elevador" method="_on_ButtonAndar3_mouse_entered"]
[connection signal="mouse_exited" from="Elevador/ElevadorInterface0/ButtonAndar3" to="Elevador" method="_on_ButtonAndar3_mouse_exited"]
[connection signal="pressed" from="Elevador/ElevadorInterface0/ButtonAndar3" to="Elevador" method="_on_ButtonAndar3_pressed"]
[connection signal="mouse_entered" from="Elevador/ElevadorInterface0/ButtonAndar4" to="Elevador" method="_on_ButtonAndar4_mouse_entered"]
[connection signal="mouse_exited" from="Elevador/ElevadorInterface0/ButtonAndar4" to="Elevador" method="_on_ButtonAndar4_mouse_exited"]
[connection signal="pressed" from="Elevador/ElevadorInterface0/ButtonAndar4" to="Elevador" method="_on_ButtonAndar4_pressed"]
[connection signal="mouse_entered" from="Elevador/ElevadorInterface0/ButtonAndar5" to="Elevador" method="_on_ButtonAndar5_mouse_entered"]
[connection signal="mouse_exited" from="Elevador/ElevadorInterface0/ButtonAndar5" to="Elevador" method="_on_ButtonAndar5_mouse_exited"]
[connection signal="pressed" from="Elevador/ElevadorInterface0/ButtonAndar5" to="Elevador" method="_on_ButtonAndar5_pressed"]
[connection signal="pressed" from="Elevador/Advertise/Button" to="Elevador" method="_on_Button_pressed"]
